syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.konstfish.bonsai";
option java_outer_classname = "BonsaiProto";
option objc_class_prefix = "HLW";

package bonsai;

// The greeting service definition.
service BonsaiService {
  // Sends a greeting
  rpc RegisterClient (RegistrationRequest) returns (RegistrationConfirmation) {}
  rpc PushMetrics (MetricsRequest) returns (MetricsConfirmation) {}
}

/// registration
// request
message RegistrationRequest {
  string job = 1;
  string host = 2;
  float interval = 3;
  repeated string labels = 4;
  repeated string scrapers = 5;
}

// confirmation
message RegistrationConfirmation {
  int32 code = 1;
  string exporter_key = 2;
}

/// metrics
// metric request
message MetricsRequest {
  string exporter_key = 1; 
  bytes metrics = 2;
}

//message MetricLabels {
//   repeated string label = 1;
//}

// metric confirmation
message MetricsConfirmation {
  int32 code = 1;
  string confirm = 2;
}